src/components/singleTransactionV2/singleTransactionV2.css
@import '../app/variablesV2.css';
@import '../app/mixins.css';

.container {
  align-items: center;
  display: flex;
  height: 100%;
}

.wrapper {
  margin: 20px 0 40px;
  padding: 0;
  width: auto;
  max-width: var(--medium-box-width);

  & .txLink {
    align-items: center;
    display: flex !important;
    justify-content: center;
  }

  & .detailsHeader {
    display: flex;
    justify-content: space-between;

    & > h1,
    & > .date {
      flex-basis: 50%;
      text-align: left;
    }

    & > .date {
      color: var(--color-dark-gray);
      font-family: var(--content-font);
      font-size: var(--paragraph-font-size-s);
      font-weight: var(--font-weight-bold);
      text-align: right;
    }
  }

  & .txIcon {
    box-sizing: border-box;
    height: 24px;
    margin-top: 20px;
    width: 24px;
  }

  & .mainContent {
    padding: 0 20px;
    width: 100%;
    box-sizing: border-box;
  }

  & .detailsFooter {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin: 0;
    padding: 0;

    & > div {
      align-items: flex-start;
      border-top: 1px solid var(--color-platinum);
      display: flex;
      padding: 20px 0;
      width: 100%;

      &:last-child {
        align-items: flex-end;
      }
    }

    & .label {
      @mixin contentSmall;

      align-items: center;
      color: var(--color-slate-gray);
      display: flex;
      margin-bottom: 10px;
    }

    & .value {
      @mixin contentLargest;

      align-items: flex-start;
      color: var(--color-maastricht-blue);
      display: flex;
      flex-direction: column;
      justify-content: center;
      margin: 0;
      padding-left: 20px;
      width: 100%;
      word-break: break-all;
      text-align: left;

      & img {
        display: inline-block;
        height: 14px;
        margin-left: 5px;
        vertical-align: middle;
        width: 14px;
      }

      &:first-child {
        padding-left: 0;
        position: relative;
      }

      &:not(:last-child) {
        padding-right: 20px;

        &::after {
          background-color: var(--color-platinum);
          content: '';
          height: calc(100% - 13px);
          position: absolute;
          right: 0;
          width: 1px;
        }
      }
    }

    & .clickable {
      cursor: pointer;
    }

    & .copied {
      cursor: initial;
      opacity: 0.6;
      text-decoration: none;
    }
  }
}

